[gd_scene load_steps=3 format=3 uid="uid://dxqb3qrddrn4u"]

[ext_resource type="Script" path="res://scripts/projectile.gd" id="1_46px1"]
[ext_resource type="PackedScene" uid="uid://b8ewwpijlarlp" path="res://scenes/hitbox.tscn" id="2_p03il"]

[node name="Projectile" type="Node2D"]
z_index = 20
script = ExtResource("1_46px1")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[node name="Hitbox" parent="." instance=ExtResource("2_p03il")]

[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
[connection signal="area_entered" from="Hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="body_entered" from="Hitbox" to="." method="_on_hitbox_body_entered"]
